--- a/style.css
+++ b/style.css
@@ -1,68 +1,354 @@
-body {
-    font-family: Arial, sans-serif;
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swop');
+* {
+    font-family: "Poppins", sans-serif;
     margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    scroll-padding-top: 2rem;
+    box-sizing: border-box;
 }
 
-h1, h2 {
+/* Variables */
+:root {
+  --container-color:#1a1e21 ;
+  --second-color:  #f50ced;
+  --text-color: #bddc20;
+  --bg-color: #840eeb;
+}
+::selection {
+    color: var(--text-color);
+    background: var(--second-color);
+}
+a {
+    text-decoration: none;
+}
+li {
+    list-style: none;
+}
+img{
+    width: 100%;
+}
+section{
+    padding: 3rem 0 2rem;
+}
+.container{
+    max-width: 1068px;
+    margin: auto;
+    width: 100%;
+}
+/* Header */
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 200;
+}
+header.shadow {
+    background: var(--bg-color);
+    box-shadow: 0 1px 4px hs1(0 4% 14% / 10%);
+    transition: 0.4s;
+}
+header.shadow.logo{
+    color: var(--text-color);
+}
+.nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 18px 0;
+}
+.logo{
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--bg-color);
+}
+.logo span {
+    color: var(--second-color);
+}
+.login{
+    padding: 8px 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    border-radius: 4px;
+    background: var(--second-color);
+    color: var(--bg-color);
+}
+.login:hover {
+    background: hs1(24, 98%, 58%);
+    transition: 0.3s;
+}
+/* Home */
+.home{
+    width: 100%;
+    min-height: 440px;
+    background: var(--container-color);
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+.home-text {
+    color: var(--bg-color);
     text-align: center;
 }
-
-.input-section {
+.home-title{
+    font-size: 3.5rem;
+}
+.home-subtitle {
+    font-size: 1rem;
+    font-weight: 400;
+}
+/* Post-Filter */
+.post-filter{
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+    margin-top: 2rem !important;
+}
+.filter-item {
+    font-size: 0.9rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+.active-filter {
+    background: var(--second-color);
+    color: var(--bg-color);
+    padding: 4px 10px;
+    border-radius: 4px;
+}
+/* Posts */
+.post{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(280px,auto));
+    justify-content: center;
+    gap: 1.5rem;
+}
+.post-box{
+    background: var(--bg-color);
+    box-shadow: 0 4px 14px hs1(355deg 25% 15% / 10%);
+    padding: 15px;
+    border-radius: 0.5rem;
+}
+.post-img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 0.5rem;
+}
+.category {
+    font-size: 0.9rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: var(--second-color);
+}
+.post-title{
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: var(--text-color);
+    /* To Remain Title In 2 Lines */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.post-date{
+    display: flex;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    font-weight: 400;
+    margin-top: 4px;
+}
+.post-desccription {
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+    margin: 5px 0 10px;
+    /* To Remain Title in 3 Lines */
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.profile-img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    border: 2px solid var(--second-color);
+}
+.footer{
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 30px 0;
 }
-
-.input-section label1 {
-    font-weight: bold;
-    margin-right: 10px;
+.footer p{
+    font-size: 0.938rem;
 }
-
-.input-section input[type="number"], .input-section input[type="date"] {
-    padding: 5px;
-    margin-right: 10px;
+.social {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
 }
-
-.input-section button {
-    padding: 5px 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.social .bx {
+    font-size: 1.4rem;
+    color: var(--text-color);
 }
-
-.expenses-list {
-    margin: 20px;
+.social .bx:hover{
+    color: var(--second-color);
+    transition: 0.3s all linear;
 }
-
-table {
+/* Post Content */
+.post-header{
     width: 100%;
-    border-collapse: collapse;
+    height: 500px;
+    background: var(--container-color);
 }
-
-th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
+.post-container {
+    max-width: 800px;
+    margin: auto;
+    width: 100%;
 }
-
-th {
-    background-color: #4CAF50;
-    color: white;
+.header-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem !important;
 }
-
-tfoot td {
-    font-weight: bold;
+.back-home{
+    color: var(--second-color);
+    font-size: 0.9rem;
 }
-
-.delete-btn {
-    padding: 5px 10px;
-    background-color: #f44336;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.header-title{
+    width: 90%;
+    font-size: 2.6rem;
+    color: var(--bg-color);
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.post-content{
+    margin-top: 10rem !important;
+}
+.sub-heading{
+    font-size: 1.2rem;
+}
+.post-text{
+    font-size: 1rem;
+    line-height: 1.7rem;
+    margin: 1rem 0;
+    text-align: justify;
+}
+/* Share */
+.share{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1rem;
+}
+.share-title{
+    font-size: 1.1rem;
+}
+/* Responsive */
+@media (max-width:1060px){
+    .container {
+        margin: auto;
+        width: 95%;
+    }
+    .home-text {
+      width: 100%
+    }
+} 
+@media (max-width: 800px){
+    .nav {
+        padding: 14px 0;
+   }
+    .post-container {
+      margin: 0 auto;
+      width: 95%;
+   }
+}   
+@media (max-width: 768px){
+    .nav {
+        padding: 10px 0;
+   }
+    section {
+    padding: 2rem 0;
+   }
+   .header-content {
+    margin-top: 3rem !important;
+   }
+   .home {
+    min-height: 380px;
+   }
+   .home-title {
+    font-size: 3rem;
+   }
+   .header-title {
+    font-size: 2rem;
+   }
+   .header-img {
+    height: 370px;
+   }
+   .post-header {
+    height: 435px;
+   }
+   .post-content {
+    margin-top: 9rem !important;
+   }
+} 
+@media (max-width: 570px) {
+    .post-header {
+        height: 390px;
+    }
+    .header-title {
+        width: 100%;
+    }
+    .header-img {
+        height: 340px;
+    }
+    .footer {
+        flex-direction: column;
+        row-gap: 1rem;
+        padding: 20px 0;
+        text-align: center;
+    }
+    @media (max-width: 396px) {
+        .home-title {
+            font-size: 2rem;
+        }
+        .home-subtitle {
+            font-size: 0.9rem;
+        }
+        .home {
+            min-height: 300px;
+        }
+        .post-box {
+            padding: 10px;
+        }
+        .header-title {
+            font-size: 1.4rem;
+        }
+        .header-img {
+            height: 240px;
+        }
+        .post-header {
+            height: 335px;
+        }
+        .post-content {
+            margin-top: 5rem !important;
+        }
+        .post-text {
+            font-size: 0.875rem;
+            line-height: 1.5rem;
+            margin: 10px 0;
+            text-align: justify;
+        }
+    }
 }
